--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
+    <title>Ana Sayfa</title>
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
+    <div class="ust">
+        <div class="buttons">
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+        <p>Hakkımda</p>
+        <div class="buttons"></div>
+    </div>
+    <div class="flex-container">
+        <header class="header-contents">
+            <h1>Mustafa Samet Dinç</h1>
+            <nav>
+                <a href="#">Ana Sayfa</a>
+                <a href="#">Hakkında</a>
+                <a href="#">İletişim</a>
+                <a href="#">Projeler</a>
+            </nav>
+        </header>
+    </div>
+    <section class="first-container">
+        <div class="half-container">
+            <img src="http://picsum.photos/id/1/300/200" />
+        </div>
+        <div class="half-container">
+            <h2>Mustafa Samet Dinç</h2>
+            <a id="projeler" href="https://github.com/msamet07?tab=repositories">Projelerim</a>
+            <p>
+                Halkın duygu, düşünce ve hayal dünyasında doğarak ağızdan ağıza dolaşan, gelenek ve göreneklerin oluşumunu
+                etkileyen hikayelere efsane denir.Ya da bazen sadece Samet denir. :)
+            </p>
+        </div>
+    </section>
+    <section class="container-gallery">
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=1" alt="1">
+            <h3>Proje1</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=2" alt="2">
+            <h3>Proje2</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=3" alt="1">
+            <h3>Proje3</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=4" alt="1">
+            <h3>Proje4</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=5" alt="1">
+            <h3>Proje5</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=6" alt="1">
+            <h3>Proje6</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=7" alt="1">
+            <h3>Proje7</h3>
+        </div>
+        <div class="gallery-item"><img 
+            src="https://picsum.photos/200/300?random=1" alt="8">
+            <h3>Proje8</h3>
+        </div>
+    </section>
+    <footer>
+        <h4>Gördüklerinizden Memnun Musunuz?</h4>
+        <a href="contact.html">Bana Ulaş</a>
     
-</body>
+    
+    </footer>
+    </body>
 </html>
